--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,22 @@
-<div class="header-container">
-    <header class="wrapper clearfix">
-      <a href="{{ site.url }}"><h1 class="title">{{ site.title }}</h1></a>
-        <nav> 
-            <ul>
-                {% for link in site.links %}
-                        <li>
-                                {% if link.external %}
-                                        <a href="{{ link.url }}">{{ link.title }}</a>
-                                {% else %}
-                                        <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-                                {% endif %} 
-                        </li>
-                {% endfor %}
-            </ul>
-        
-        </nav>
-    </header>
-</div
+<section class="header-13-sub v-center bg-midnight-blue">
+    <div>
+        <div class="background">&nbsp;</div>
+        <div class="container">
+            <div class="row">
+                <div class="span5 offset1">
+                    <h3>Let's help each other</h3>
+                    <p class="lead">
+                        Share stuff with friends. Help others with usefull stuff.
+                    </p>
+                    <br>
+                    <div class="row">
+                        <a class="btn btn-danger btn-huge span3" href="#">Get it now!</a>
+                    </div>
+                </div>
+                <div class="span4 offset1">
+                    <img src="{{site.assets}}common-files/img/header/iphone.png" class="hidden-phone" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
