--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,10 @@
-<script async src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="{{ site.url }}/assets/js/main.js"></script>
-<script src="{{ site.url }}/assets/js/ga.js"></script>
+<script src="{{site.assets}}common-files/js/jquery-1.10.2.min.js"></script>
+<script src="{{site.assets}}flat-ui/js/bootstrap.min.js"></script>
+<script src="{{site.assets}}common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+<script src="{{site.assets}}common-files/js/modernizr.custom.js"></script>
+<script src="{{site.assets}}common-files/js/page-transitions.js"></script>
+<script src="{{site.assets}}common-files/js/easing.min.js"></script>
+<script src="{{site.assets}}common-files/js/jquery.svg.js"></script>
+<script src="{{site.assets}}common-files/js/jquery.svganim.js"></script>
+<script src="{{site.assets}}common-files/js/jquery.parallax.min.js"></script>
+<script src="{{site.assets}}common-files/js/startup-kit.js"></script>
