--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,12 +3,10 @@
     <head>
 {% include head.html %}
     </head>
-
     <body>
 {% include header.html %}
-
 {{ content }}
-
+{% include footer.html %}
 {% include scripts.html %}
     </body>
 </html>
