--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
                     <div class="navbar span12">
                         <div class="navbar-inner">
                             <button type="button" class="btn btn-navbar"></button>
-                            <a class="brand" href="#">Startup</a>
+                            <a class="brand" href="#">Jipio</a>
                             <div class="nav-collapse collapse">
                                 <ul class="nav pull-right">
                                     {% for link in site.nav %}
