--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,9 @@
             </div>
         </header>
         <section class="header-23-sub bg-midnight-blue">
-            <div class="background">&nbsp;</div>
+            <div class="background">
+                <img src="{{site.assets}}images/linda.jpg" alt="">
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="span12">
