--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,3 +29,6 @@
         <link rel="stylesheet" href="{{site.assets}}flat-ui/css/flat-ui.css">
         <link rel="stylesheet" href="{{site.assets}}common-files/css/icon-font.css">
         <link rel="stylesheet" href="{{site.assets}}common-files/css/animations.css">
+        <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-header/css/style.css">
+        <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-content/css/style.css">
+        <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-footer/css/style.css">
