--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,9 +35,7 @@
             </div>
         </header>
         <section class="header-23-sub bg-midnight-blue">
-            <div class="background">
-                <img src="{{site.assets}}images/linda.jpg" alt="">
-            </div>
+            <div class="background" style="background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;"></div>
             <div class="container">
                 <div class="row">
                     <div class="span12">
