--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,50 +1,34 @@
-        <header class="header-23">
-            <div class="container">
-                <div class="row">
-                    <div class="navbar span12">
-                        <div class="navbar-inner">
-                            <button type="button" class="btn btn-navbar"></button>
-                            <a class="brand" href="#">Jipio</a>
-                            <div class="nav-collapse collapse">
-                                <ul class="nav pull-right">
-                                    {% for link in site.nav %}
-                                    <li>
-                                        {% if link.external %}
-                                        <a href="{{ link.url }}" target="_blank">{{ link.title }}</a>
-                                        {% else %}
-                                        <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-                                        {% endif %}
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                                <ul class="subnav">
-                                    {% for link in site.subnav %}
-                                    <li>
-                                        {% if link.external %}
-                                        <a href="{{ link.url }}" target="_blank">{{ link.title }}</a>
-                                        {% else %}
-                                        <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-                                        {% endif %}
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+        <header class="header-21">
+    <div class="container">
+        <div class="navbar span12">
+            <div class="navbar-inner">
+                <button type="button" class="btn btn-navbar nav-pull-left"></button>
+                <a class="brand" href="#">Startup</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#">HOME</a></li>
+                        <li><a href="#">COMPANY</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                    <form class="navbar-form pull-right">
+                        <a class="btn" href="#">SIGN IN</a>
+                    </form>
                 </div>
             </div>
-        </header>
-        <section class="header-23-sub bg-midnight-blue">
-            <div class="background" style="background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="span12">
-                        <div class="hero-unit">
-                            <strong>{{site.title}}</strong>
-                            <a class="btn-play" href="#">Play</a>
-                            <span>{{site.description}}</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </div>
+    </div>
+</header>
+<section class="header-21-sub v-center" style="height: 796px;">
+    <div>
+        <div class="background" style="background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;">&nbsp;</div>
+        <div class="container">
+            <h3><img class="hl" src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="100" height="100" alt="">
+                Startup Framework</h3>
+            <p class="lead">You have the design, you have the code</p>
+        </div>
+    </div>
+    <a class="control-btn fui-arrow-down" href="#"> </a>
+</section>
+
