--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#">COMPANY</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#delen">Delen</a></li>
+                        <li><a href="#lenen">Lenen</a></li>
+                        <li><a href="#ruilen">Ruilen</a></li>
+                        <li><a href="#vrienden">Vrienden</a></li>
                     </ul>
                     <form class="navbar-form pull-right">
-                        <a class="btn" href="#">SIGN IN</a>
+                        <a class="btn" href="#">Signin with Facebook</a>
                     </form>
                 </div>
             </div>
