--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#delen">Delen</a></li>
-                        <li><a href="#lenen">Lenen</a></li>
-                        <li><a href="#ruilen">Ruilen</a></li>
-                        <li><a href="#vrienden">Vrienden</a></li>
+                        <li><a href="#share">Share</a></li>
+                        <li><a href="#lend">Lend</a></li>
+                        <li><a href="#trade">Trade</a></li>
+                        <li><a href="#friends">with Friends</a></li>
                     </ul>
                     <form class="navbar-form pull-right">
-                        <a class="btn" href="#">Signin with Facebook</a>
+                        <a class="btn" href="#">Sign-in with Facebook</a>
                     </form>
                 </div>
             </div>
@@ -25,8 +25,8 @@
         <div class="background" style="background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;">&nbsp;</div>
         <div class="container">
             <h3><img class="hl" src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="100" height="100" alt="">
-                Startup Framework</h3>
-            <p class="lead">You have the design, you have the code</p>
+                Together, we own it.</h3>
+            <p class="lead">Share and trade with friends.</p>
         </div>
     </div>
     <a class="control-btn fui-arrow-down" href="#"> </a>
