--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,51 @@
-        <header class="header-21">
-    <div class="container">
-        <div class="navbar span12">
-            <div class="navbar-inner">
-                <button type="button" class="btn btn-navbar nav-pull-left"></button>
-                <a class="brand" href="#">Startup</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#share">Share</a></li>
-                        <li><a href="#lend">Lend</a></li>
-                        <li><a href="#trade">Trade</a></li>
-                        <li><a href="#friends">with Friends</a></li>
-                    </ul>
-                    <form class="navbar-form pull-right">
-                        <a class="btn" href="#">Sign-in with Facebook</a>
-                    </form>
+ <div class="page-wrapper">
+            <!-- header-10 -->
+            <header class="header-10">
+                <div class="container">
+                    <div class="navbar col-sm-12" role="navigation">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle"></button>
+                            <a class="brand" href="#">Startup</a>
+                         </div>
+                        <div class="collapse navbar-collapse pull-right">
+                            <ul class="nav pull-left">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li><a href="#">Account</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                            <form class="navbar-form pull-left">
+                                <a class="btn btn-info" href="#">Buy Now</a>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</header>
+                <div class="header-background"></div>
+            </header>
+            <section class="header-10-sub v-center bg-midnight-blue">
+                <div class="background style=background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;"">
+                    &nbsp;
+                </div>
+                <div>
+                    <div class="container">
+                        <div class="hero-unit">
+                            <h1>Startup Framework is a set of components</h1>
+                            <p>
+                                We’ve created the product that will help your
+                                <br/>
+                                startup to look even better.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <a class="control-btn fui-arrow-down" href="#"> </a>
+            </section>
+            
+            
+            
 <section class="header-21-sub v-center" style="height: 796px;">
     <div>
-        <div class="background" style="background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;">&nbsp;</div>
+        <div class="background" >&nbsp;</div>
         <div class="container">
             <h3><img class="hl" src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="100" height="100" alt="">
                 Together, we own it.</h3>
