--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
- <div class="page-wrapper">
+           <div class="page-wrapper">
             <!-- header-10 -->
             <header class="header-10">
                 <div class="container">
@@ -23,7 +23,7 @@
                 <div class="header-background"></div>
             </header>
             <section class="header-10-sub v-center bg-midnight-blue">
-                <div class="background style=background: url({{site.assets}}images/linda.jpg) no-repeat center center fixed; background-size: cover;"">
+                <div class="background">
                     &nbsp;
                 </div>
                 <div>
@@ -40,18 +40,3 @@
                 </div>
                 <a class="control-btn fui-arrow-down" href="#"> </a>
             </section>
-            
-            
-            
-<section class="header-21-sub v-center" style="height: 796px;">
-    <div>
-        <div class="background" >&nbsp;</div>
-        <div class="container">
-            <h3><img class="hl" src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="100" height="100" alt="">
-                Together, we own it.</h3>
-            <p class="lead">Share and trade with friends.</p>
-        </div>
-    </div>
-    <a class="control-btn fui-arrow-down" href="#"> </a>
-</section>
-
