--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,32 @@
-<footer class="footer-11">
-    <div class="container">
-        <a class="brand" href="#"><img src="../../common-files/icons/infinity-bw@2x.png" width="42" height="21" alt=""></a>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="social-btns">
-            <a href="#">
-                <div class="fui-vimeo"></div>
-                <div class="fui-vimeo"></div>
-            </a>
-            <a href="#">
-                <div class="fui-facebook"></div>
-                <div class="fui-facebook"></div>
-            </a>
-            <a href="#">
-                <div class="fui-twitter"></div>
-                <div class="fui-twitter"></div>
-            </a>
-        </div>
-    </div>
-    <div class="additional-links">
+<!-- footer-7 -->
+            <footer class="footer-7 ">
+                <div class="container">
+                    <a href="#"><span class="fui-home"> </span></a>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#">HOME</a>
+                            </li>
+                            <li>
+                                <a href="#">WORK</a>
+                            </li>
+                            <li class="scroll-btn">
+                                <a href="#" class="scroll-top fui-arrow-up"> </a>
+                            </li>
+                            <li>
+                                <a href="#">BLOG</a>
+                            </li>
+                            <li>
+                                <a href="#">CONTACT</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="social-btns">
+                        <a href="#"><div class="fui-vimeo"></div><div class="fui-vimeo"></div></a>
+                        <a href="#"><div class="fui-facebook"></div><div class="fui-facebook"></div></a>
+                        <a href="#"><div class="fui-twitter"></div><div class="fui-twitter"></div></a>
+                    </div>
+                        <div class="additional-links">
         <div class="container">
             <p class="lead"><b>200,000</b> users registered since January</p>
             <a href="#">Terms &amp; Conditions</a>
@@ -34,4 +36,6 @@
             <a href="#">Contact Us</a>
         </div>
     </div>
-</footer>
+
+                </div>
+            </footer>
