Ruben's late night

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
         {% if site.owner.google_plus %}<link rel="author" href="{{ site.owner.google_plus }}?rel=author">{% endif %}
 
         <link rel="shortcut icon" href="{{site.logo}}">
+        <link rel="stylesheet" href="public/css/site.css">
         <link rel="stylesheet" href="{{site.assets}}flat-ui/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="{{site.assets}}flat-ui/css/flat-ui.css">
         <link rel="stylesheet" href="{{site.assets}}common-files/css/icon-font.css">
