--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,42 +1,42 @@
-           <div class="page-wrapper">
-            <!-- header-10 -->
-            <header class="header-10">
-                <div class="container">
-                    <div class="navbar col-sm-12" role="navigation">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="#">Startup</a>
-                         </div>
-                        <div class="collapse navbar-collapse pull-right">
-                            <ul class="nav pull-left">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">Account</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                            <form class="navbar-form pull-left">
-                                <a class="btn btn-info" href="#">Buy Now</a>
-                            </form>
-                        </div>
-                    </div>
+<!-- header-10 -->
+<header class="header-17">
+    <div class="container">
+        <div class="row">
+            <div class="navbar col-sm-12" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle"></button>
+                    <a class="brand" href="#">
+                        <img src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="50" height="50" alt=""><span>Jipio</span>
+                    </a>
                 </div>
-                <div class="header-background"></div>
-            </header>
-            <section class="header-10-sub v-center bg-midnight-blue">
-                <div class="background">
-                    &nbsp;
+                <div class="collapse navbar-collapse pull-right">
+                    <ul class="nav pull-left">
+                        <li class="active"><a href="#">HOME</a></li>
+                        <li><a href="#">COMPANY</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                    <form class="navbar-form pull-left">
+                        <a class="btn btn-primary" href="#">SIGN IN</a>
+                    </form>
                 </div>
-                <div>
-                    <div class="container">
-                        <div class="hero-unit">
-                            <h1>Startup Framework is a set of components</h1>
-                            <p>
-                                We’ve created the product that will help your
-                                <br/>
-                                startup to look even better.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <a class="control-btn fui-arrow-down" href="#"> </a>
-            </section>
+            </div>
+        </div>
+    </div>
+    <div class="header-background"></div>
+</header>
+<div class="presenation">
+    <section class="video">
+        <div id="bgVideo" class="background"></div>
+        <div class="holder">
+            <div class="cont">
+                <div class="logo"></div>
+                <a href="javascript://" target="_blank" class="play"><span class="fui-play"></span></a>
+                <span class="suys"><strong>Help</strong> each other, <strong>Share</strong> what you own</span>
+                <a class="control-btn fui-arrow-down" href="#"></a>
+            </div>
+        </div>
+    </section>
+    <div id="h-17-pt-1"></div>
+</div>
