--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle"></button>
                     <a class="brand" href="#">
-                        <img src="{{site.assets}}common-files/icons/Infinity-Loop@2x.png" width="50" height="50" alt=""><span>Jipio</span>
+                        <img src="{{site.assets}}images/jipiologo8080.png" width="50" height="50" alt=""><span>Jipio</span>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse pull-right">
