--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!--</1><header class="header-17">
+</1><header class="header-17">
     <div class="container">
         <div class="row">
             <div class="navbar col-sm-12" role="navigation">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="header-background"></div>
-</header>-->
+</header>
 
 <div class="presenation">
     <section class="video">
