--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,43 +1,30 @@
 <footer class="footer-7 ">
     <div class="container">
-        <a href="#">
-            <span class="fui-home"></span>
-        </a>
+        <a href="#"><span class="fui-home"> </span></a>
         <nav>
             <ul>
-                <li>
-                    <a href="#">HOME</a>
-                </li>
-                <li>
-                    <a href="#">WORK</a>
-                </li>
-                <li class="scroll-btn">
-                    <a href="#" class="scroll-top fui-arrow-up"></a>
-                </li>
-                <li>
-                    <a href="#">BLOG</a>
-                </li>
-                <li>
-                    <a href="#">CONTACT</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="http://blog.jipio.com">Blog</a></li>
+                <li><a href="http://blog.jipio.com/press">Press</a></li>
+                <li class="scroll-btn"><a href="#" class="scroll-top fui-arrow-up"> </a></li>
+                <li><a href="http://blog.jipio.com/terms">Terms</a></li>
+                <li><a href="http://blog.jipio.com/privacy">Privacy</a></li>
+                <li><a href="http://blog.jipio.com/contact">Contact</a></li>
             </ul>
         </nav>
         <div class="social-btns">
-            <a href="#">
+            <a href="https://vimeo.com/jipio" target="_blank">
                 <div class="fui-vimeo"></div>
                 <div class="fui-vimeo"></div>
             </a>
-            <a href="#">
+            <a href="http://facebook.com/getjipio" target="_blank">
                 <div class="fui-facebook"></div>
                 <div class="fui-facebook"></div>
             </a>
-            <a href="#">
+            <a href="http://twitter.com/jip_io" target="_blank">
                 <div class="fui-twitter"></div>
                 <div class="fui-twitter"></div>
             </a>
-        </div>
-        <div class="additional-links">
-
         </div>
     </div>
 </footer>
