--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,16 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle"></button>
                     <a class="brand" href="#">
-                        <img src="{{site.assets}}images/jipiologo8080.png" width="50" height="50" alt=""><span>Jipio</span>
+                        <img src="{{site.assets}}images/jipiologo8080.png" width="50" height="50" alt=""><span><img src="{{site.assets}}images/jipiologo8080.png" width="50" height="50" alt=""></span>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse pull-right">
                     <ul class="nav pull-left">
-                        <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#">COMPANY</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">ShareY</a></li>
+                        <li><a href="#">Trade</a></li>
+                        <li><a href="#">Friends</a></li>
+                        <li><a href="#">Get the app</a></li>
                     </ul>
                     <form class="navbar-form pull-left">
                         <a class="btn btn-primary" href="#">SIGN IN</a>
