--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,13 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle"></button>
                     <a class="brand" href="#">
-                        <img src="{{site.assets}}images/jipiologo8080.png" width="50" height="50" alt=""><span><img src="{{site.assets}}images/Jipio_logo_black.png" width="100" height="62" alt=""></span>
+                        <img src="{{site.assets}}images/jipio_logo_2x.png" width="50" height="50" alt=""><span><img src="{{site.assets}}images/Jipio_logo_black.png" width="100" height="62" alt=""></span>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse pull-right">
                     <ul class="nav pull-left">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">ShareY</a></li>
+                        <li><a href="#">Share</a></li>
                         <li><a href="#">Trade</a></li>
                         <li><a href="#">Friends</a></li>
                         <li><a href="#">Get the app</a></li>
