--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                         <li><a href="#">Get the app</a></li>
                     </ul>
                     <form class="navbar-form pull-left">
-                        <a class="btn btn-primary" href="#">SIGN IN</a>
+                        <a class="btn btn-primary" href="#">SIGN IN<img src="{{site.assets}}images/android2x.png"></a>
                     </form>
                 </div>
             </div>
