--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
                         <li><a href="#">Friends</a></li>
                         <li><a href="#">Get the app</a></li>
                     </ul>
-                    <ul class="navbar-form pull-left">
-                        <li><a class="btn btn-primary" href="#">A <img src="{{site.assets}}images/android2x.png" width="50%"></a></li>
-                        <li><a class="btn btn-primary" href="#">B <img src="{{site.assets}}images/ios.svg" width="50%"></a></li>
-                        <li><a class="btn btn-primary" href="#">C <img src="{{site.assets}}images/facebook.png" width="50%"></a></li>
+                    <form class="navbar-form pull-left">
+                        <li><a class="btn btn-primary" href="#">A <img src="{{site.assets}}images/android2x.png" height="40"></a></li>
+                        <li><a class="btn btn-primary" href="#">B <img src="{{site.assets}}images/ios.svg" height="40"></a></li>
+                        <li><a class="btn btn-primary" href="#">C <img src="{{site.assets}}images/facebook.png" height="40"></a></li>
                     </ul>
                 </div>
             </div>
