--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,10 @@
                         <li><a href="#">Get the app</a></li>
                     </ul>
                     <form class="navbar-form pull-left">
-                        <li><a class="btn btn-primary" href="#">A <img src="{{site.assets}}images/android2x.png" height="40"></a></li>
-                        <li><a class="btn btn-primary" href="#">B <img src="{{site.assets}}images/ios.svg" height="40"></a></li>
-                        <li><a class="btn btn-primary" href="#">C <img src="{{site.assets}}images/facebook.png" height="40"></a></li>
-                    </ul>
+                        <a class="btn btn-primary" href="#">A <img src="{{site.assets}}images/android2x.png" height="40"></a>
+                        <a class="btn btn-primary" href="#">B <img src="{{site.assets}}images/ios.svg" height="40"></a>
+                        <a class="btn btn-primary" href="#">C <img src="{{site.assets}}images/facebook.png" height="40"></a>
+                    
                 </div>
             </div>
         </div>
