--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
             <div class="cont">
                 <div class="logo"></div>
                 <a href="javascript://" target="_blank" class="play"><span class="fui-play"></span></a>
-                <span class="suys"><strong>Together,</strong> we<strong> own</strong> it. Join us!</span>
+                <span class="suys"><strong>Together,</strong> we<strong> own</strong> it. Join now!</span>
                 <a class="control-btn fui-arrow-down" href="#"></a>
             </div>
         </div>
