--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
                         <li><a href="#">Get the app</a></li>
                     </ul>
                     <form class="navbar-form pull-left">
-                        <a class="btn btn-primary" href="#">A <img src="{{site.assets}}images/android2x.png" height="40"></a>
-                        <a class="btn btn-primary" href="#">B <img src="{{site.assets}}images/ios.svg" height="40"></a>
-                        <a class="btn btn-primary" href="#">C <img src="{{site.assets}}images/facebook.png" height="40"></a>
+                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/android2x.png" height="30"></a>
+                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/ios.svg" height="30"></a>
+                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/facebook.png" height="30"></a>
                     
                 </div>
             </div>
