--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-</1><header class="header-17">
+<header class="header-17">
     <div class="container">
         <div class="row">
             <div class="navbar col-sm-12" role="navigation">
@@ -20,7 +20,7 @@
                         <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/android2x.png" height="25"></a>
                         <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/ios.svg" height="25"></a>
                         <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/facebook.png" height="25"></a>
-                    
+
                 </div>
             </div>
         </div>
