--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
                         <li><a href="#">Get the app</a></li>
                     </ul>
                     <form class="navbar-form pull-left">
-                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/android2x.png" height="25"></a>
-                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/ios.svg" height="25"></a>
-                        <a class="btn btn-primary" href="#"> <img src="{{site.assets}}images/facebook.png" height="25"></a>
+                        <a href="http:/play.google.com"> <img src="{{site.assets}}images/android2x.png" width="25" height="25"></a>
+                        <a href="http://apple.com"> <img src="{{site.assets}}images/ios.svg" width="25" height="25"></a>
+                        <a href="http://facebook.com"> <img src="{{site.assets}}images/facebook.png" width="25" height="25"></a>
 
                 </div>
             </div>
