--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,9 @@
                         <li><a href="#">Trade</a></li>
                         <li><a href="#">Friends</a></li>
                         <li><a href="#">Get the app</a></li>
-                        <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android2x.png" width="25" height="25"></a> </li>
-                        <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios.svg" width="25" height="25"></a> </li>
-                        <li><a href="http://facebook.com"> <img src="{{site.assets}}images/facebook.png" width="25" height="25"> </a></li>
+                        <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android2x.png" width="30" height="30"></a> </li>
+                        <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios2x.png" width="30" height="30"></a> </li>
+                        <li><a href="http://facebook.com"> <img src="{{site.assets}}images/facebook2x.png" width="30" height="30"> </a></li>
                     </ul>
                     <form class="navbar-form pull-left">
                         
