--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle"></button>
                     <a class="brand" href="#">
-                        <img src="{{site.assets}}images/jipio_logo_2x.png" alt=""><span><!--<img src="{{site.assets}}images/Jipio_logo_black.png" width="100" height="62" alt="">--></span>
+                        <img src="{{site.assets}}images/jipio_logo_2x.png" width="50" height="50" alt=""><span><!--<img src="{{site.assets}}images/Jipio_logo_black.png" width="100" height="62" alt="">--></span>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse pull-right">
@@ -15,8 +15,8 @@
                         <li><a href="#">Trade</a></li>
                         <li><a href="#">Friends</a></li>
                         <li><a href="#">Get the app</a></li>
-                        <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android_2x.png"></a> </li>
-                        <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios_2x.png"></a> </li>
+                        <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android_2x.png" width="25" height="25"></a> </li>
+                        <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios_2x.png" width="25" height="25"></a> </li>
                         
                     </ul>
                     <form class="navbar-form pull-left">
