--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,6 @@
                         <li><a href="#">Share</a></li>
                         <li><a href="#">Trade</a></li>
                         <li><a href="#">Friends</a></li>
-                        <li><a href="#">Get the app</a></li>
                         <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android_2x.png" width="25" height="25"></a> </li>
                         <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios_2x.png" width="25" height="25"></a> </li>
                         
@@ -36,7 +35,7 @@
             <div class="cont">
                 <div class="logo"></div>
                 <a href="javascript://" target="_blank" class="play"><span class="fui-play"></span></a>
-                <span class="suys"><strong>Together,</strong> we<strong> own</strong> it.</span>
+                <span class="suys"><strong> </strong> we<strong> own</strong> it.</span>
                 <a class="control-btn fui-arrow-down" href="#"></a>
             </div>
         </div>
