Fix overflow, fixes #16

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,10 @@
                         <li><a href="#">Get the app</a></li>
                         <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android_2x.png" width="25" height="25"></a> </li>
                         <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios_2x.png" width="25" height="25"></a> </li>
-                        
+
                     </ul>
                     <form class="navbar-form pull-left">
-                        
+
 
                 </div>
             </div>
@@ -31,7 +31,7 @@
 
 <div class="presenation">
     <section class="video">
-        <div id="bgVideo" class="background"></div>
+        <div id="bgVideo"></div>
         <div class="holder">
             <div class="cont">
                 <div class="logo"></div>
