--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="http://blog.jipio.com">Blog</a></li>
-                <li><a href="http://blog.jipio.com/press">Press</a></li>
+                <li><a href="http://hello.jipio.com">Blog</a></li>
+                <li><a href="http://hello.jipio.com/press">Press</a></li>
                 <li class="scroll-btn"><a href="#" class="scroll-top fui-arrow-up"> </a></li>
-                <li><a href="http://blog.jipio.com/terms">Terms</a></li>
-                <li><a href="http://blog.jipio.com/privacy">Privacy</a></li>
-                <li><a href="http://blog.jipio.com/contact">Contact</a></li>
+                <li><a href="http://hello.jipio.com/terms">Terms</a></li>
+                <li><a href="http://hello.jipio.com/privacy">Privacy</a></li>
+                <li><a href="http://hello.jipio.com/contact">Contact</a></li>
             </ul>
         </nav>
         <div class="social-btns">
