--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,8 @@
             <div class="cont">
                 <div class="logo"></div>
                 <a href="javascript://" target="_blank" class="play"><span class="fui-play"></span></a>
-                <span class="suys"><strong> </strong> we<strong> own</strong> it.</span><br>
-                <a href="http://beta.jip.io/auth/facebook"><img src="{{site.assets}}images/loginfb_2x.png" width="400" height="74"></a>
+                <span class="suys"><strong> </strong> we<strong> own</strong> it.</span>
+                <br><br><br><a href="http://beta.jip.io/auth/facebook"><img src="{{site.assets}}images/loginfb_2x.png" width="400" height="74"></a>
                 <a class="control-btn fui-arrow-down" href="#"></a>
                 
             </div>
