--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,4 @@
         <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-header/css/style.css">
         <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-content/css/style.css">
         <link rel="stylesheet" href="{{site.assets}}ui-kit/ui-kit-footer/css/style.css">
-        <link rel="stylesheet" href="{{site.assets}}public/css/site.css">
+        <link rel="stylesheet" href="public/css/site.css">
