--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
                 <div class="logo"></div>
                 <a href="javascript://" target="_blank" class="play"><span class="fui-play"></span></a>
                 <span class="suys"><strong> </strong> we<strong> own</strong> it.</span>
-                <p><br><a href="http://beta.jip.io/auth/facebook"><img src="{{site.assets}}images/loginfb_2x.png" width="400" height="74"></a></p>
+                <p><a href="http://beta.jip.io/auth/facebook"><img src="{{site.assets}}images/loginfb_2x.png" width="400" height="74"></a></p>
                 <a class="control-btn fui-arrow-down" href="#"></a>
                 
             </div>
