--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,11 @@
                 <div class="collapse navbar-collapse pull-right">
                     <ul class="nav pull-left">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Share</a></li>
-                        <li><a href="#">Trade</a></li>
-                        <li><a href="#">Friends</a></li>
+                        <li><a href="#share">Share</a></li>
+                        <li><a href="#trade">Trade</a></li>
+                        <li><a href="#friends">Friends</a></li>
                         <li><a href="http:/play.google.com"> <img src="{{site.assets}}images/android_2x.png" width="25" height="25"></a> </li>
-                        <li><a href="http://apple.com"> <img src="{{site.assets}}images/ios_2x.png" width="25" height="25"></a> </li>
+                        <li><a href="https://itunes.apple.com/es/app/jipio/id587055596?l=en&mt=8"> <img src="{{site.assets}}images/ios_2x.png" width="25" height="25"></a> </li>
 
                     </ul>
                     <form class="navbar-form pull-left">
